# ndt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
docs/: address_8cpp.html  address_8cpp__incl.map  address_8cpp__incl.md5  address_8h.html  address_8h__dep__incl.map  address_8h__dep__incl.md5  address_8h__incl.map  address_8h__incl.md5  address_8h_source.html  annotated.html  bin__rw_8h.html  bin__rw_8h__dep__incl.map  bin__rw_8h__dep__incl.md5  bin__rw_8h__incl.map  bin__rw_8h__incl.md5  bin__rw_8h_source.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  build__type_8h.html  build__type_8h__dep__incl.map  build__type_8h__dep__incl.md5  build__type_8h__incl.map  build__type_8h__incl.md5  build__type_8h_source.html  build__type__defs_8h.html  build__type__defs_8h__dep__incl.map  build__type__defs_8h__dep__incl.md5  build__type__defs_8h__incl.map  build__type__defs_8h__incl.md5  build__type__defs_8h_source.html  class_fast_pimpl-members.html  class_fast_pimpl.html  class_fast_pimpl__coll__graph.map  (+1125 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  (+76 more)
docs_builder/: CMakeLists.txt  Doxyfile.in  GenDocs.cmake  UpdateDocs.cmake
include/: Address.h  CommonInclude.h  FastPimpl.h  NdtException.h  NdtUtils.h  NetException.h  NetUtils.h  Socket.h  UDP.h
include/ndt/: Address.h  CommonInclude.h  address.h  bin_rw.h  buffer.h  common.h  context.h  endian.h  event_handler_select.h  exception.h  executor_select.h  executor_select_base.h  fast_pimpl.h  index_maker.h  nocopyable.h  nodefaultconstructible.h  nomoveable.h  packet_handlers.h  socket.h  system_wrappers.h  thread_pool.h  udp.h  useful_base_types.h  utils.h
include/ndt/platform/nix/: context_base.h  executor_select_impl.h
include/ndt/platform/win/: context_base.h  context_base_error.h  executor_select_impl.h
scripts/: build_test_macos_travisci.py  circle_linux_configure_build_test.py
sources/: CMakeLists.txt
sources/include/ndt/: address.h  bin_rw.h  buffer.h  common.h  context.h  core.h  endian.h  exception.h  executor_select_base.h  file.h  interval.h  packet.h  serialize.h  sys_error_code.h  sys_file_ops.h  sys_socket_ops.h  tag.h  thread_pool.h  type_name.h  udp.h  useful_base_types.h  utils.h  value.h
sources/include/ndt/platform/nix/: context_base.h  executor_select_impl.h
sources/include/ndt/platform/win/: context_base.h
sources/src/: address.cpp  buffer.cpp  common.cpp  exception.cpp  file.cpp  packet.cpp  sys_file_ops.cpp  sys_socket_ops.cpp  system_wrappers.cpp  utils.cpp
src/: Address.cpp  CommonInclude.cpp  NdtException.cpp  NdtUtils.cpp  NetException.cpp  NetUtils.cpp  Socket.cpp  UDP.cpp  address.cpp  buffer.cpp  context.cpp  endian.cpp  event_handler_select.cpp  exception.cpp  packet.cpp  socket.cpp  system_wrappers.cpp  thread_pool.cpp  udp.cpp  utils.cpp
src/platform/nix/: executor_select_impl.cpp
src/platform/win/: context_base_error.cpp  executor_select_impl.cpp
tests/: Address_tests.cpp  CMakeLists.txt  Memvcmp_tests.cpp  Socket_tests.cpp  address_tests.cpp  main_tests.cpp  memvcmp_tests.cpp  socket_tests.cpp  thread_pool_tests.cpp
tests/include/: packet_info.h
tests/include/test/: sys_error_code_getter.h
tests/src/: address_tests.cpp  bin_rw_tests.cpp  buffer_tests.cpp  context_tests.cpp  endian_tests.cpp  file_ops_tests.cpp  index_maker_tests.cpp  interval_tests.cpp  main_tests.cpp  packet_queue_tests.cpp  packet_tests.cpp  reader_tests.cpp  serialize_tests.cpp  server_example.cpp  socket_tests.cpp  thread_pool_tests.cpp  utils_tests.cpp  value_tests.cpp
